--- a/styles/modal.css
+++ b/styles/modal.css
@@ -17,7 +17,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,.3);
+  background-color: rgba(0,0,0,.8);
   display: table;
   height: 100%;
   width: 100%;
@@ -37,7 +37,7 @@
   display: inline-block;
   text-align: left;
   padding: 15px;
-  max-width: 600px;
+  max-width: 800px;
   min-width: 100px;
   position: relative;
 }
@@ -45,12 +45,13 @@
 .modal-close {
   padding: 0 4px;
   position: absolute;
-  top: 5px;
+  top: 10px;
   right: 10px;
   z-index: 100;
   font-size: 2em;
   font-style: normal;
   cursor: pointer;
+  color: #fff;
 }
 
 .modal-control:checked ~ .modal {
