Create offcanvas component. Add logo on demo page.

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   margin: 0 auto;
-  background-color: #F6F8F8;
+  background-color: #fff;
 }
 
 header {
