--- a/styles/tooltip.css
+++ b/styles/tooltip.css
@@ -30,10 +30,10 @@
 .tooltip-content:before {
   content: '';
   position: absolute;
-  top: -5px;
+  top: -10px;
   left: 50%;
   margin-left: -5px;
-  border-width: 0 5px 5px;
+  border-width: 5px;
   border-color: rgba(0, 0, 0, 0);
   border-style: solid;
   border-bottom-color: #333;
